# better-mem

./: .gitattributes  .gitignore  README.md  Taskfile.yml  docker-compose.yml  go.mod  go.sum  go.work.sum  locustfile.py
.nvim/: lsp.conf
cmd/api/: Dockerfile  local.go  main.go  server.go
cmd/worker/: Dockerfile  local.go  main.go  server.go
demo/: build_demo.sh  chat_history.json  main.go
demo/src/: api_client.go  chat.go  chat_history.go  config.go  menu.go
docs/: docs.go  swagger.json  swagger.yaml
inference/: .gitignore  Dockerfile  client.py  generate_protos.sh  label.py  main.py  prediction_pb2.py  prediction_pb2.pyi  prediction_pb2_grpc.py  pyproject.toml  server.py
inference/models/embedding/: model.onnx
inference/models/prediction/: model.onnx  tokenizer.json
internal/config/: database.go  general.go  llm.go  memory_management.go  sqlite.go  utils.go  workers.go
internal/core/: chat.go  error.go  long_term_memory.go  memory_common.go  message.go  short_term_memory.go
internal/grpc_client/: generate_protos.sh  predict.go  prediction.pb.go  prediction_grpc.pb.go
internal/llm/: base.go  error.go  prompts.go
internal/repository/: all.go  chat.go  long_term_memory.go  short_term_memory.go
internal/service/: chat.go  long_term_memory.go  memory.go  memory_enhancement.go  memory_management.go  memory_vector.go  message.go  short_term_memory.go
internal/task/: asynq.go  classify_memory.go  client.go  liteq.go  manage_memory.go
protos/: prediction.proto
scripts/: build.sh  open_api_docs.sh  run_api_hot_reload.sh  run_worker_hot_reload.sh
(+37 files in other folders)
